fix: made more robust the code